# serializer version: 1
# name: TestContract.test_should_return_same_hash_in_different_processes[column]
  1166043995912835534
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[time]
  766453026781410313
# ---
